feat: обновление параметров бэктеста и улучшение визуализации
- Изменен таймфрейм с 4H на 15min и период тестирования на 2024-2026 гг.
- Скорректированы доли активов (30%), порог ребалансировки (0.5%) и комиссия (0.4%).
- Обновлен инструмент B с TMON на LQDT.
- Добавлен расчет и логирование ключевых метрик (PnL, доходность, стоимость позиций).
- Улучшена визуализация: отключен ноль на осях, добавлены маркеры-точки для цен и буквенные метки (S, B, D) для сделок.